fixed checkout image on mobile

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -431,6 +431,7 @@ input {
 
   .thankyou-photo {
     width: 100%;
+    max-height: 25vh;
   }
 }
 
